Introduce bot players with GnuGo